2010-09-06  Anton Muhin  <antonm@chromium.org>

Reviewed by Adam Barth.

        [v8] bypass caches when query memory usage from post GC and in crash handler.
        https://bugs.webkit.org/show_bug.cgi?id=45036

        Add Chromium-specific API to query actual memory usage which bypasses any caches.

        * platform/chromium/ChromiumBridge.h:
2010-09-06  Anton Muhin  <antonm@chromium.org>

        Reviewed by Adam Barth.

        [v8] bypass caches when query memory usage from post GC and in crash handler.
        https://bugs.webkit.org/show_bug.cgi?id=45036

        Add Chromium-specific API to query actual memory usage which bypasses any caches.

        * public/WebKitClient.h:
        (WebKit::WebKitClient::actualMemoryUsageMB):
        * src/ChromiumBridge.cpp:
        (WebCore::ChromiumBridge::actualMemoryUsageMB):

Canonical link: https://commits.webkit.org/57576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66818 268f45cc-cd09-0410-ab3c-d52691b4dbfc